added and styled the header

--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>The Odin Project Portfolio | KAFEES</title>
+    <title>KAFEES | The Odin Project Portfolio</title>
 </head>
 <body>
-    
+
+    <!--Page header section-->
+    <div class="header">
+        <div class="header-left">
+            <h1>Project Portfolio by KAFEES</h1>
+        </div>
+        <div class="header-right">
+            <ul class="header-links">
+                <li><a class="header-link" href="#">About Me</a></li>
+                <li><a class="header-link" href="#">Projects</a></li>
+                <li><a class="header-link" href="#">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+
+
 </body>
 </html>
