--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Page header section-->
     <div class="header">
         <div class="header-left">
-            <h1>Project Portfolio by KAFEES</h1>
+            <h1 class="header-text">Project Portfolio by KAFEES</h1>
         </div>
         <div class="header-right">
             <ul class="header-links">
