added and styled the hero

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <!--Page header section-->
-    <div class="header">
+    <header class="header">
         <div class="header-left">
             <h1 class="header-text">Project Portfolio by KAFEES</h1>
         </div>
@@ -20,8 +20,21 @@
                 <li><a class="header-link" href="#">Contact</a></li>
             </ul>
         </div>
-    </div>
+    </header>
 
+    <!--Page hero section-->
+    <div class="hero">
+        <div class="hero-left">
+            <h1 class="hero-header">My Odin Project Story</h1>
+            <p class="hero-text">This webpage documents (or eventually will document) my Odin Project progress.</p>
+            <p class="hero-text">There will eventually be descriptions and links to other projects created during this course to serve as a hub, portfolio, or just a memory.
+                The page will be periodically updated during the course of the project, so it might (and hopefully will) change and get better in the future.
+            </p>
+            <button class="hero-btn">Sign up</button>
+            <p class="hero-text small">This button does absolutely nothing ... yet ... but it burns your eyes when you point at it!</p>
+        </div>
+        <div class="hero-right"><img class="hero-image" width="400px" src="./images/top-logo.png" alt="The Odin Project logo"></div>
+    </div>
 
 </body>
 </html>
