--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div>
         <div class="header-right">
             <ul class="header-links">
-                <li><a class="header-link" href="#">About Me</a></li>
-                <li><a class="header-link" href="#">Projects</a></li>
+                <li><a class="header-link" href="#hero-heading">About Me</a></li>
+                <li><a class="header-link" href="#projects-heading">Projects</a></li>
                 <li><a class="header-link" href="#">Contact</a></li>
             </ul>
         </div>
@@ -25,7 +25,7 @@
     <!--Page hero section-->
     <div class="hero">
         <div class="hero-left">
-            <h1 class="hero-header">My Odin Project Story</h1>
+            <h1 class="hero-heading" id="hero-heading">My Odin Project Story</h1>
             <p class="hero-text">This webpage documents (or eventually will document) my Odin Project progress.</p>
             <p class="hero-text">There will eventually be descriptions and links to other projects created during this course to serve as a hub, portfolio, or just a memory.
                 The page will be periodically updated during the course of the project, so it might (and hopefully will) change and get better in the future.
@@ -34,6 +34,43 @@
             <p class="hero-text small">This button does absolutely nothing ... yet ... but it burns your eyes when you point at it!</p>
         </div>
         <div class="hero-right"><img class="hero-image" width="400px" src="./images/top-logo.png" alt="The Odin Project logo"></div>
+    </div>
+
+    <!--Project gallery section-->
+    <div class="projects">
+        <div class="projects-heading" id="projects-heading"><h1>Check out my Odin projects</h1></div>
+        <div class="project-gallery">
+            <div class="project-wrapper">
+                <a><img class="project-img" src="https://placehold.co/200" width="200px"></a>
+                <h2 class="project-title">This will be a project title</h2>
+                <p class="project-text">This will be a short description of the project</p>
+            </div>
+            <div class="project-wrapper">
+                <a><img class="project-img" src="https://placehold.co/200" width="200px"></a>
+                <h2 class="project-title">This will be a project title</h2>
+                <p class="project-text">This will be a short description of the project</p>
+            </div>
+            <div class="project-wrapper">
+                <a><img class="project-img" src="https://placehold.co/200" width="200px"></a>
+                <h2 class="project-title">This will be a project title</h2>
+                <p class="project-text">This will be a short description of the project</p>
+            </div>
+            <div class="project-wrapper">
+                <a><img class="project-img" src="https://placehold.co/200" width="200px"></a>
+                <h2 class="project-title">This will be a project title</h2>
+                <p class="project-text">This will be a short description of the project</p>
+            </div>
+            <div class="project-wrapper">
+                <a><img class="project-img" src="https://placehold.co/200" width="200px"></a>
+                <h2 class="project-title">This will be a project title</h2>
+                <p class="project-text">This will be a short description of the project</p>
+            </div>
+            <div class="project-wrapper">
+                <a><img class="project-img" src="https://placehold.co/200" width="200px"></a>
+                <h2 class="project-title">This will be a project title</h2>
+                <p class="project-text">This will be a short description of the project</p>
+            </div>
+        </div>
     </div>
 
 </body>
