--- a/index.html
+++ b/index.html
@@ -15,29 +15,29 @@
         </div>
         <div class="header-right">
             <ul class="header-links">
-                <li><a class="header-link" href="#hero-heading">About Me</a></li>
-                <li><a class="header-link" href="#projects-heading">Projects</a></li>
+                <li><a class="header-link" href="#hero">About Me</a></li>
+                <li><a class="header-link" href="#projects">Projects</a></li>
                 <li><a class="header-link" href="#">Contact</a></li>
             </ul>
         </div>
     </header>
 
     <!--Page hero section-->
-    <div class="hero">
+    <div class="hero" id="hero">
         <div class="hero-left">
-            <h1 class="hero-heading" id="hero-heading">My Odin Project Story</h1>
+            <h1 class="hero-heading">My Odin Project Story</h1>
             <p class="hero-text">This webpage documents (or eventually will document) my Odin Project progress.</p>
             <p class="hero-text">There will eventually be descriptions and links to other projects created during this course to serve as a hub, portfolio, or just a memory.
                 The page will be periodically updated during the course of the project, so it might (and hopefully will) change and get better in the future.
             </p>
             <button class="hero-btn">Sign up</button>
-            <p class="hero-text small">This button does absolutely nothing ... yet ... but it burns your eyes when you point at it!</p>
+            <p class="hero-text small">This button does absolutely nothing ... yet ... or ever ... but it changes color when you point at it! :)</p>
         </div>
         <div class="hero-right"><img class="hero-image" width="400px" src="./images/top-logo.png" alt="The Odin Project logo"></div>
     </div>
 
     <!--Project gallery section-->
-    <div class="projects">
+    <div class="projects" id="projects">
         <div class="projects-heading" id="projects-heading"><h1>Check out my Odin projects</h1></div>
         <div class="project-gallery">
             <div class="project-wrapper">
