add and style quote section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <ul class="header-links">
                 <li><a class="header-link" href="#hero">About Me</a></li>
                 <li><a class="header-link" href="#projects">Projects</a></li>
+                <li><a class="header-link" href="#quote-section">Get some inspiration</a></li>
                 <li><a class="header-link" href="#">Contact</a></li>
             </ul>
         </div>
@@ -69,6 +70,18 @@
                 <a><img class="project-img" src="https://placehold.co/200" width="200px"></a>
                 <h2 class="project-title">This will be a project title</h2>
                 <p class="project-text">This will be a short description of the project</p>
+            </div>
+        </div>
+    </div>
+
+    <!--MOTIVATIONAL QUOTE SECTION-->
+    <div class="quote-section" id="quote-section">
+        <div class="quote-wrapper">
+            <div class="quote-text">
+                Sometimes we make the process more complicated than we need to. We will never make a journey of a thousand miles by fretting about how long it will take or how hard it will be. We make the journey by taking each day step by step and then repeating it again and again until we reach our destination.
+            </div>
+            <div class="quote-author">
+                - Joseph B. Wirthlin
             </div>
         </div>
     </div>
