add and style contacts section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>KAFEES | The Odin Project Portfolio</title>
 </head>
 <body>
@@ -17,8 +18,8 @@
             <ul class="header-links">
                 <li><a class="header-link" href="#hero">About Me</a></li>
                 <li><a class="header-link" href="#projects">Projects</a></li>
-                <li><a class="header-link" href="#quote-section">Get some inspiration</a></li>
-                <li><a class="header-link" href="#">Contact</a></li>
+                <li><a class="header-link" href="#quote">Get some inspiration</a></li>
+                <li><a class="header-link" href="#contacts">Contacts</a></li>
             </ul>
         </div>
     </header>
@@ -75,13 +76,26 @@
     </div>
 
     <!--MOTIVATIONAL QUOTE SECTION-->
-    <div class="quote-section" id="quote-section">
+    <div class="quote-section" id="quote">
         <div class="quote-wrapper">
             <div class="quote-text">
                 Sometimes we make the process more complicated than we need to. We will never make a journey of a thousand miles by fretting about how long it will take or how hard it will be. We make the journey by taking each day step by step and then repeating it again and again until we reach our destination.
             </div>
             <div class="quote-author">
                 - Joseph B. Wirthlin
+            </div>
+        </div>
+    </div>
+
+    <!--CONTACT SECTION-->
+    <div class="contact-section" id="contacts">
+        <div class="contacts">
+            <div class="contact-header">
+                <h1 class="contact-heading">You can reach me here:</h1>
+            </div>
+            <div class="contacts-wrapper">
+                <a href="https://github.com/Kafees"><button class="contact-button"><i class="fa fa-github"> GitHub</i></button></a>
+                <a href="https://www.linkedin.com/in/filip-kafka-6b0916277/"><button class="contact-button"><i class="fa fa-linkedin"> LinkedIn</i></button></a>
             </div>
         </div>
     </div>
