add footer, add placeholder project

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="hero-left">
             <h1 class="hero-heading">My Odin Project Story</h1>
             <p class="hero-text">This webpage documents (or eventually will document) my Odin Project progress.</p>
-            <p class="hero-text">There will eventually be descriptions and links to other projects created during this course to serve as a hub, portfolio, or just a memory.
+            <p class="hero-text">There will be descriptions and links to other projects created during this course to serve as a hub, portfolio, or just a memory.
                 The page will be periodically updated during the course of the project, so it might (and hopefully will) change and get better in the future.
             </p>
             <button class="hero-btn">Sign up</button>
@@ -43,32 +43,32 @@
         <div class="projects-heading" id="projects-heading"><h1>Check out my Odin projects</h1></div>
         <div class="project-gallery">
             <div class="project-wrapper">
-                <a><img class="project-img" src="https://placehold.co/200" width="200px"></a>
+                <a href="./projects/placeholder.html"><img class="project-img" src="https://placehold.co/200" width="200px"></a>
                 <h2 class="project-title">This will be a project title</h2>
                 <p class="project-text">This will be a short description of the project</p>
             </div>
             <div class="project-wrapper">
-                <a><img class="project-img" src="https://placehold.co/200" width="200px"></a>
+                <a href="./projects/placeholder.html"><img class="project-img" src="https://placehold.co/200" width="200px"></a>
                 <h2 class="project-title">This will be a project title</h2>
                 <p class="project-text">This will be a short description of the project</p>
             </div>
             <div class="project-wrapper">
-                <a><img class="project-img" src="https://placehold.co/200" width="200px"></a>
+                <a href="./projects/placeholder.html"><img class="project-img" src="https://placehold.co/200" width="200px"></a>
                 <h2 class="project-title">This will be a project title</h2>
                 <p class="project-text">This will be a short description of the project</p>
             </div>
             <div class="project-wrapper">
-                <a><img class="project-img" src="https://placehold.co/200" width="200px"></a>
+                <a href="./projects/placeholder.html"><img class="project-img" src="https://placehold.co/200" width="200px"></a>
                 <h2 class="project-title">This will be a project title</h2>
                 <p class="project-text">This will be a short description of the project</p>
             </div>
             <div class="project-wrapper">
-                <a><img class="project-img" src="https://placehold.co/200" width="200px"></a>
+                <a href="./projects/placeholder.html"><img class="project-img" src="https://placehold.co/200" width="200px"></a>
                 <h2 class="project-title">This will be a project title</h2>
                 <p class="project-text">This will be a short description of the project</p>
             </div>
             <div class="project-wrapper">
-                <a><img class="project-img" src="https://placehold.co/200" width="200px"></a>
+                <a href="./projects/placeholder.html"><img class="project-img" src="https://placehold.co/200" width="200px"></a>
                 <h2 class="project-title">This will be a project title</h2>
                 <p class="project-text">This will be a short description of the project</p>
             </div>
@@ -91,7 +91,8 @@
     <div class="contact-section" id="contacts">
         <div class="contacts">
             <div class="contact-header">
-                <h1 class="contact-heading">You can reach me here:</h1>
+                <p class="contact-text">If you have any questions, are interested in collaboration or anything else</p>
+                <h1 class="contact-heading">↓You can reach me here↓</h1>
             </div>
             <div class="contacts-wrapper">
                 <a href="https://github.com/Kafees"><button class="contact-button"><i class="fa fa-github"> GitHub</i></button></a>
@@ -100,5 +101,9 @@
         </div>
     </div>
 
+    <!--FOOTER-->
+    <footer class="footer">
+        <p class="footer-text">Created by KAFEES as a part of Odin Project Assignment</p>
+    </footer>
 </body>
 </html>
